Bug 403074 - Dolphin does not offer a way to change the group ownership (chgrp)
Summary: Dolphin does not offer a way to change the group ownership (chgrp)
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Properties dialog (other bugs)
Version First Reported In: 5.28.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2019-01-10 15:46 UTC by Bernhard E. Reiter
Modified: 2019-02-18 22:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.56.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard E. Reiter 2019-01-10 15:46:49 UTC
SUMMARY
Dolphin does not offer a way to change the group ownership of a directory or file.
(To reach the same result that a chgrp command would on the command line.)

STEPS TO REPRODUCE
1. create a new file or directory `test`
2. start dolphin
3. show properties of `test` via right click and properties ("Eigenschaften")
4. Select tab "permission" ("Berechtigungen")
5. Select button  for the extended permissions/ACLs ("Erweiterte Berechtigungen")

OBSERVED RESULT
There is no way to change the default group from the creation to a different group
where the user is a member.

EXPECTED RESULT
There should be a noticeable way. (E.g. by making the displayed owner and group
after step 4. a button and allow entering a different one.)


SOFTWARE/OS VERSIONS
Version 16.08.3 on Debian GNU/Linux Stretch

KDE Plasma Version: 5.8.6
KDE Frameworks Version: 5.28.0
Qt Version: 5.7.1

ADDITIONAL INFORMATION
This behaviour is especially annoying on systems used by multiple users,
like a family laptop or a small office setup.

The extended dialog offers access to the ACLs available by getfacl/setfacl
on GNU systems (with the right file-system presumately), which is a more complicated
set of ACLs. While it could add access to another group, this cannot replace changing the group owner ship as it is a different action.
Comment 1 Bernhard E. Reiter 2019-01-10 15:49:54 UTC
Additional information:
The problem was seen on nfs4 and ext4 filesystems.

There are related issues, which do not quite match, but show that there is demand for this functionality and that it probably has worked before:

https://bugs.kde.org/show_bug.cgi?id=52032 
https://bugs.kde.org/show_bug.cgi?id=225658
https://bugs.kde.org/show_bug.cgi?id=399270
Comment 2 Bernhard E. Reiter 2019-01-11 07:48:00 UTC
A user here tested it with 18.12.0 and found the issue there also.
Comment 3 Kai Uwe Broulik 2019-01-11 08:38:32 UTC
That dialog comes from KIO, re-assigning
Comment 4 Christoph Feck 2019-01-11 08:42:15 UTC
According to the code in KPropertiesDialog, the group can be changed if the user is part of multiple groups, see KUser::groupNames().

For my user, running "groups" in bash shows "users audio", but the properties dialog does not offer the combobox to select one of them. Could be an issue in KUser::groupNames().
Comment 5 Christoph Feck 2019-01-11 08:46:38 UTC
Checking further, the code is wrong. "groupList" is never initialized with user.groupNames().

https://cgit.kde.org/kio.git/tree/src/widgets/kpropertiesdialog.cpp#n1888
Comment 6 Christoph Feck 2019-02-18 22:06:13 UTC
Git commit 2bba2c0795d77e893fdbea1da9dc3d79e45594d0 by Christoph Feck.
Committed on 18/02/2019 at 22:03.
Pushed by cfeck into branch 'master'.

[KPropertiesDialog] Fix group combobox

groupList was never initialized with KUser::groupNames(),
causing the subsequent combobox setup to be skipped.
FIXED-IN: 5.56.0

Differential Revision: https://phabricator.kde.org/D18849

M  +2    -2    src/widgets/kpropertiesdialog.cpp

https://commits.kde.org/kio/2bba2c0795d77e893fdbea1da9dc3d79e45594d0