[KPropertiesDialog] Fix group combobox

groupList was never initialized with KUser::groupNames(),
causing the subsequent combobox setup to be skipped.

BUG: 403074
FIXED-IN: 5.56.0

Differential Revision: https://phabricator.kde.org/D18849